@@ -1031,6 +1031,8 @@ body {
 
 <p><strong>book</strong> | <code>filename</code> | A book file to open when this item is activated.</p>
 
+<p><strong>book_is_readable</strong> | <code>bool</code> | If true, &ldquo;read&rdquo; is displayed in the tooltip instead of &ldquo;use&rdquo;. Defaults to true.</p>
+
 <p><strong>quality</strong> | <code>predefined_string</code> | Item quality matching an id in items/qualities.txt</p>
 
 <p><strong>item_type</strong> | <code>predefined_string</code> | Equipment slot matching an id in items/types.txt</p>
